# sphinx-needs-tree-map

./: .pre-commit-config.yaml  .yamlfmt.yaml  AUTHORS  CONTRIBUTING.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: Makefile  conf.py  configuration.rst  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: index.rst
docs/directives/: needtreemap.rst
example/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
example/docs/: conf.py  index.rst  ubproject.toml  visualizations.rst
example/docs/requirements/: index.rst  system.rst  task_management.rst  user_management.rst
example/docs/specifications/: api.rst  database.rst  index.rst
example/docs/test_plan/: authentication_tests.rst  index.rst  task_tests.rst
sphinx_needs_tree_map/: __init__.py
sphinx_needs_tree_map/directives/: needtreemap.py
sphinx_needs_tree_map/utils/: __init__.py  filters.py  hierarchy.py
tests/: test_filters.py  test_hierarchy.py  test_plotly_renderer.py
